--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,8 @@ main {
 
 .pokemon-image {
     position: absolute;
-    bottom: 43%;
-    left: 50%;
+    bottom: 53%;
+    left: 51%;
     transform: translate(-63%, 20%);
     height: 18%;
 }
@@ -37,20 +37,56 @@ main {
     position: absolute;
     font-weight: 600;
     color: #aaa;
-    top: 54.5%;
-    right: 27%;
-    font-size: clamp(8px, 5vw, 25px);
+    top: 23%;
+    right: 22%;
+    font-size: clamp(8px, 5vw, 22px);
 }
 
 .pokemon-name {
     color: #3a444d;
     text-transform: capitalize;
+    width: 50%;
 }
+
+.pokemon-number {
+    color: #3a444d;
+    position: absolute;
+    top: 23%;
+    right: 63%;
+    font-size: 24px;
+}
+
+.pokemon-content {
+    position: absolute;
+    font-weight: 600;
+    color: #3a444d;
+    font-size: clamp(8px, 5vw, 22px);
+    display: block;
+    left: 14%;
+    bottom: 17%;
+    text-align: left;
+    padding: 1%;
+    outline: 2px solid #333;
+    border-radius: 5px;
+    font-weight: 600;
+    color: #3a444d;
+    font-size: clamp(8px, 5vw, 1rem);
+    box-shadow: -3px 4px 0 #888, -5px 7px 0 #333;
+    background-color: white;
+    width: 64%;
+}
+
+.pokemon-content > * {
+    display: block;
+    margin-bottom: 10px;
+    padding: 1px;
+  }
+
 
 .form {
     position: absolute;
     width: 65%;
-    top: 65%;
+    top: 85%;
     left: 13.5%;
 }
 
@@ -67,9 +103,9 @@ main {
 
 .buttons {
     position: absolute;
-    bottom: 10%;
-    left: 50%;
-    width: 65%;
+    bottom: 79%;
+    left: 67%;
+    width: 30%;
     transform: translate(-57%, 0);
     display: flex;
     gap: 20px
@@ -91,3 +127,31 @@ main {
     box-shadow: inset -4px 4px 0 #222;
     font-size: 0.9rem;
 }
+
+.buttons-move {
+    position: absolute;
+    bottom: 33.2%;
+    left: 73%;
+    width: 10%;
+    transform: translate(-57%, 0);
+    display: flex;
+    gap: 10px
+}
+
+.buttonMove {
+    width: 50%;
+    padding: 4%;
+    border: 2px solid #000;
+    border-radius: 5px;
+    font-size: clamp(8px, 5vw, 1rem);
+    font-weight: 600;
+    color: #444;
+    background-color: white;
+    box-shadow: -1px 1px 0 #222, -1px 1px 0 #000;
+}
+
+.buttonMove:active {
+    box-shadow: inset -4px 4px 0 #222;
+    font-size: 0.9rem;
+}
+
